--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "prisma:migrate": "prisma generate && prisma migrate dev",
     "prisma:reset": "prisma migrate reset",
     "seed": "tsx src/prisma/seeder.ts",
-    "dev": "tsx watch src/index.ts",
-    "start": "node dist/index.js",
-    "build": "tsc",
+    "dev": "tsx watch --env-file=.env.development src/index.ts",
+    "start": "node --env-file=.env.production dist/index.js",
+    "build": "tsc && ts-add-js-extension --dir=dist",
     "test": "jest"
   },
   "keywords": [],
@@ -53,6 +53,7 @@
     "jest": "^30.2.0",
     "prisma": "^7.1.0",
     "supertest": "^7.1.4",
+    "ts-add-js-extension": "^1.6.6",
     "ts-jest": "^29.4.6",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
