--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "prisma:migrate": "prisma generate && prisma migrate dev",
     "prisma:reset": "prisma migrate reset",
     "seed": "tsx src/prisma/seeder.ts",
-    "dev": "tsx watch --env-file=.env.development src/index.ts",
-    "start": "node --env-file=.env.production dist/index.js",
+    "dev": "tsx watch src/index.ts",
+    "start": "node dist/index.js",
     "build": "tsc && ts-add-js-extension --dir=dist",
     "test": "jest"
   },
